Recreated migrations, trying to get Address form to mark addresses correctly

--- a/test/fixtures/addresses.yml
+++ b/test/fixtures/addresses.yml
@@ -2,12 +2,14 @@
 
 one:
   street_number: MyString
+  street_name: MyString
   city: MyString
   state: MyString
   zip_code: MyString
 
 two:
   street_number: MyString
+  street_name: MyString
   city: MyString
   state: MyString
   zip_code: MyString
